add query to use table conf_generate_number

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,11 +17,13 @@ spring:
     hibernate:
       ddl-auto: validate
     database-platform: org.hibernate.dialect.PostgreSQLDialect
-    show-sql: false
+    show-sql: true
     open-in-view: false
-
-generated-value:
-  package-number:
-    seq: "package_number_seq"
-    mask: "CH%06d"
+    properties:
+      hibernate:
+        cache:
+          use_second_level_cache: true
+          use_query_cache: true
+          region:
+            factory_class: org.hibernate.cache.ehcache.EhCacheRegionFactory
 
